Version 0.5.6 (unreleased)
--------------------------
* Updated render method to adapt for Django 2.1 (PR #120, thanks @skozan)


Version 0.5.5
-------------
* I messed the 0.5.4 release, re-releasing as 0.5.5

Version 0.5.4
-------------
* Removed a couple gremlins (PR #113, thanks @Pawamoy)
* Added autocapitalize="off", autocorrect="off" and spellcheck="false" to the genreated field (PR #116, thanks @rdonnelly)
* Test against Django 1.11
* Drop support of Django 1.7 ("it'll probably still work")

Version 0.5.3
-------------
* Ability to pass a per-field challenge generator function (Fixes #109)
* Added a feature to get captchas from a data pool of pre-created captchas (PR #110, thanks @skozan)
* Cleanup to remove old code handling timezones for no longer supported Django versions
* Fix for "Size must be a tuple" issue with Pillow 3.4.0 (Fixes #111)

Version 0.5.2
-------------
* Use any mutliplication uperator instead of "*". (Fixes #77 via PR #104, thanks @honsdomi and @isergey)
* Test against Django 1.10

Version 0.5.1
-------------
* Fine tuning MANIFEST.in
* Prevent testproject from installing into site-packages

Version 0.5.0
-------------
* Adds missing includes in MANIFEST.in

Version 0.4.7
-------------
* Supported Django versions are now 1.7, 1.8 and 1.9
* Trying to fix the TravisCI build errors
* Use Django templates to render the individual fields, as well as the assembled Captcha Field (Issue #31)


Version 0.4.6
-------------
* Fixes an UnicodeDecodeError which was apparently only triggered during testing on TravisCI (I hope)
* Support for Django 2.0 urlpatterns syntax (PR #82, Thanks @R3v1L)
* settings.CAPTCHA_FONT_PATH may be a list, in which case a font is picked randomly (Issue #51 fixed in PR #88, Thanks @inflrscns)

Version 0.4.5
-------------
* Test with tox
* Test against Django 1.8 final
* Added ability to force a fixed image size (PR #76, Thanks @superqwer)

Version 0.4.4
-------------
* Added id_prefix argument (fixes issue #37)
