@@ -1,6 +1,8 @@
 Version 0.5.6 (unreleased)
 --------------------------
 * Updated render method to adapt for Django 2.1 (PR #120, thanks @skozan)
+* Improved compatibility with Django 2.0, tests against Django 2.0a1 (PR #121, thanks @Kondou-ger)
+* Dropped support for PIL (use Pillow instead)
 
 
 Version 0.5.5
